feat: !added directory primary id
