# src/layerHistory/controllers/layerHistoryController.ts
@@ -3,12 +3,16 @@ import httpStatus from 'http-status-codes';
 import { injectable, inject } from 'tsyringe';
 import { Services } from '../../common/constants';
 import { ILogger } from '../../common/interfaces';
-import { ILayerHistoryIdentifier, ILayerHistoryResponse, IUpdateLayerHistoryStatusRequestBody } from '../interfaces';
+import { ILayerHistoryResponse, IUpdateLayerHistoryStatusRequestBody } from '../interfaces';
 
 import { LayerHistoryManager } from '../models/layerHistoryManager';
 
-type UpdateLayerHistoryHandler = RequestHandler<ILayerHistoryIdentifier, ILayerHistoryResponse, IUpdateLayerHistoryStatusRequestBody>;
-type LayerHistoryHandler = RequestHandler<ILayerHistoryIdentifier, ILayerHistoryResponse>;
+interface ILayerHistoryParams {
+  directory: string;
+}
+
+type UpdateLayerHistoryHandler = RequestHandler<ILayerHistoryParams, ILayerHistoryResponse, IUpdateLayerHistoryStatusRequestBody>;
+type LayerHistoryHandler = RequestHandler<ILayerHistoryParams, ILayerHistoryResponse>;
 
 @injectable()
 export class LayerHistoryController {
@@ -19,7 +23,7 @@ export class LayerHistoryController {
 
   public getLayerHistory: LayerHistoryHandler = async (req, res, next) => {
     try {
-      const layer = await this.manager.get(req.params);
+      const layer = await this.manager.get(req.params.directory);
       return res.status(httpStatus.OK).json(layer);
     } catch (err) {
       next(err);
@@ -28,7 +32,7 @@ export class LayerHistoryController {
 
   public createLayerHistory: LayerHistoryHandler = async (req, res, next) => {
     try {
-      const layer = await this.manager.create(req.params);
+      const layer = await this.manager.create(req.params.directory);
       return res.status(httpStatus.CREATED).json(layer);
     } catch (err) {
       next(err);
@@ -37,7 +41,7 @@ export class LayerHistoryController {
 
   public updateLayerHistoryStatus: UpdateLayerHistoryHandler = async (req, res, next) => {
     try {
-      const layer = await this.manager.updateStatus(req.params, req.body.status);
+      const layer = await this.manager.updateStatus(req.params.directory, req.body.status, req.body.id, req.body.version);
       return res.status(httpStatus.OK).json(layer);
     } catch (err) {
       next(err);
